fix navbar wrapping on mobile

--- a/content/assets/styles.css
+++ b/content/assets/styles.css
@@ -50,7 +50,13 @@ header nav {
 }
 
 header nav h1 {
-  font-size: 1.75rem;
+  font-size: 1.25rem;
+}
+
+@media screen and (min-width: 640px) {
+  header nav h1 {
+    font-size: 1.75rem;
+  }
 }
 
 header nav h1 a {
